# 3D-Multi-Object-Tracker-Cpp

./: CMakeLists.txt  README.md  main.cpp
config/global/: casa_mot.yaml  second_iou_mot.yaml
config/near_online/: casa_mot.yaml
config/online/: casa_mot.yaml  second_iou_mot.yaml
include/: config.h  kitti_dataset.h  tracker.h  trajectory.h  utils.h
src/: kitti_dataset.cpp  tracker.cpp  trajectory.cpp  utils.cpp
